# meridian

./: .gitignore  AGENTS.md  README.md  STATUS.md  TOPICS.md  clients.yaml  config.yaml  engineering-topics.yaml  industries.yaml  interests-topics.yaml  projects.yaml  topics.yaml
agents/: compiler.py  conceptual_agent.py  daily_distill.py  debrief.py  evolution_detector.py  linter.py  qa_agent.py  synthesis_scheduler.py  synthesizer.py  watchdog.py
cli/: pyproject.toml
cli/meridian_cli/: __init__.py  main.py
n8n/: conceptual-daily.json  conceptual-monthly.json  conceptual-weekly.json  daily-compile.json  daily-distill.json  daily-synthesize.json  fathom-webhook.json  hourly-watchdog.json  lint-weekly.json
outputs/: client-audit-v2.md  migration-readiness.md
prompts/: compiler.md  compiler_plan.md  compiler_write.md  conceptual_connections.md  conceptual_contradictions.md  daily_distill.md  debrief.md  linter.md  qa_agent.md  synthesizer_extract.md  synthesizer_write.md  synthesizer_write_engineering.md  synthesizer_write_interests.md
raw/: _index.md
receiver/: Dockerfile  README.md  app.py  requirements.txt
reports/: README.md
scripts/: archive-bulk-import.py  audit-clients.py  backup-restic.env.example  backup-restic.md  backup-restic.sh  backup-to-r2.env.example  backup-to-r2.md  backup-to-r2.sh  classify-clients-by-industry.py  classify-engineering-fragments.py  collect-admin-stats.sh  compare-grades.py  diff-synthesis.sh  extract-client-learnings.py  grade-synthesis.py  industries-migrate.py  ingest-fathom-history.py  ingest-git-history.py  (+16 more)
(+53 files in other folders)
